# Mini-Agent-Orchestrator-Framework

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
clients/: cli_client.py
clients/web/: builder.html  create-account.html  flow-builder.html  index.html  login.html
deploy/: Dockerfile  nginx.conf
examples/: transcript.md
examples/configs/: mini_agent.json  tour_agent.json
examples/corpora/: mini-agent-doc.txt  tour-packages.txt
src/mini_agent/: __init__.py  __main__.py  build_kb.py  server.py  session.py  settings.py
src/mini_agent/configs/default/: state_machine_config.json
src/mini_agent/configs/document_helper/: state_machine_config.json
src/mini_agent/configs/tour_agency/: state_machine_config.json
src/mini_agent/db/: __init__.py  configs.py  database.py  users.py
src/mini_agent/engine/: state_machine.py  state_memory.py
src/mini_agent/models/: brain_output.py  planner_output.py
src/mini_agent/states/: custom_conditions.py  custom_states.py  lifecycle_states.py  tool_registry.py  utils.py
src/mini_agent/states/ai/: brain_states.py  tool_states.py
src/mini_agent/states/ai/llm/: fallback_agent.py  response_generator.py  the_brain.py  the_planner.py
src/mini_agent/states/ai/search/: internet_search.py  rag_search.py
src/mini_agent/states/conditions/: utils_conditions.py
tests/: conftest.py  test_db_configs.py  test_db_users.py  test_state_machine.py
