[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-agent-framework"
version = "0.1.0"
description = "A JSON-configured directed state-machine agent orchestrator — engine is code, agent behaviour is configuration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.3.0",
    "chromadb>=0.5.0",
    "duckduckgo-search>=6.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
mini-agent = "mini_agent.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mini_agent = ["configs/**/*.json"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# Long prompt/description string literals are intentional; line length is left to formatting.
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
